--- a/pages/index.html
+++ b/pages/index.html
@@ -67,13 +67,13 @@
          
          
           <li class="fancynav-item">
-            <a class="fancynav-link" href="./page-one-page.html#default-progressbar" data-fancyscroll="data-fancyscroll"><span class="fancynav-link-content">Why</span></a>
+            <a class="fancynav-link" href="./index.html#default-progressbar" data-fancyscroll="data-fancyscroll"><span class="fancynav-link-content">Why</span></a>
           </li>
           <li class="fancynav-item">
-            <a class="fancynav-link" href="./page-one-page.html#default-video" data-fancyscroll="data-fancyscroll"><span class="fancynav-link-content">Watch</span></a>
+            <a class="fancynav-link" href="./index.html#default-video" data-fancyscroll="data-fancyscroll"><span class="fancynav-link-content">Watch</span></a>
           </li>
           <li class="fancynav-item">
-            <a class="fancynav-link" href="./page-one-page.html#default-movement" data-fancyscroll="data-fancyscroll"><span class="fancynav-link-content">Join</span></a>
+            <a class="fancynav-link" href="./index.html#default-movement" data-fancyscroll="data-fancyscroll"><span class="fancynav-link-content">Join</span></a>
           </li>
           <li class="fancynav-item">
             <a class="fancynav-link" href="./page-contact.html" data-fancyscroll="data-fancyscroll"><span class="fancynav-link-content">Connect</span></a>
