--- a/pages/index.html
+++ b/pages/index.html
@@ -162,7 +162,7 @@
                 <div class="progress-line mr-4 mt-4" data-options='{"progress":58,"text":"Independents"}'></div>
                 <div class="progress-line mr-4 mt-4" data-options='{"progress":52,"text":"Democrats"}'></div>
                 <p class="mt-4">Nearly two-thirds of Americans say the political climate currently prevents them from saying things they believe because others might find them offensive, according to the Cato National Survey. </p>
-                <a class="btn btn-outline-dark px-5 mt-5" href="#">see Cato National Survey Data</a>
+                <a class="btn btn-outline-dark px-5 mt-5" href="#https://www.cato.org/publications/survey-reports/poll-62-americans-say-they-have-political-views-theyre-afraid-share">see Cato National Survey Data</a>
               </div>
             </div>
           </div>
