--- a/pages/index.html
+++ b/pages/index.html
@@ -56,9 +56,9 @@
           </svg>
         </div>
         <div class="fancynavbar-addon" data-zanim-lg='{"from":{"opacity":1,"x":45},"to":{"opacity":1,"x":0},"ease":"CubicBezier","duration":0.8,"delay":0.4}' data-zanim-trigger="scroll">
-          <a class="fancynavbar-addon-item" href="#https://twitter.com/Amer_Unsilenced"><span class="fab fa-twitter"></span></a>
-          <a class="fancynavbar-addon-item" href="#https://twitter.com/Amer_Unsilenced"><span class="fab fa-facebook"></span></a>
-          <a class="fancynavbar-addon-item" href="#https://twitter.com/Amer_Unsilenced"><span class="fab fa-instagram"></span></a>
+          <a class="fancynavbar-addon-item" href="https://twitter.com/Amer_Unsilenced"><span class="fab fa-twitter"></span></a>
+          <a class="fancynavbar-addon-item" href="https://www.facebook.com/AmericaUnsilenced"><span class="fab fa-facebook"></span></a>
+          <a class="fancynavbar-addon-item" href="https://instagram.com/America.Unsilenced"><span class="fab fa-instagram"></span></a>
           
         </div>
       </div>
@@ -162,7 +162,7 @@
                 <div class="progress-line mr-4 mt-4" data-options='{"progress":58,"text":"Independents"}'></div>
                 <div class="progress-line mr-4 mt-4" data-options='{"progress":52,"text":"Democrats"}'></div>
                 <p class="mt-4">Nearly two-thirds of Americans say the political climate currently prevents them from saying things they believe because others might find them offensive, according to the Cato National Survey. </p>
-                <a class="btn btn-outline-dark px-5 mt-5" href="#https://www.cato.org/publications/survey-reports/poll-62-americans-say-they-have-political-views-theyre-afraid-share">see Cato National Survey Data</a>
+                <a class="btn btn-outline-dark px-5 mt-5" href="https://www.cato.org/publications/survey-reports/poll-62-americans-say-they-have-political-views-theyre-afraid-share">see Cato National Survey Data</a>
               </div>
             </div>
           </div>
@@ -303,7 +303,7 @@
             <div class="col-lg-8">
               <h2>Check out our Facebook</h2>
               <p class="px-lg-6 px-md-5">Join the #AmericaUnsilenced movement by watching, sharing, joining, and challenging!</p>
-              <a class="btn btn-outline-dark rounded-capsule mt-4" href="#https://www.facebook.com/AmericaUnsilenced">Visit</a>
+              <a class="btn btn-outline-dark rounded-capsule mt-4" href="https://www.facebook.com/AmericaUnsilenced">Visit</a>
             </div>
           </div>
         </div>
