--- a/pages/index.html
+++ b/pages/index.html
@@ -123,7 +123,7 @@
               <div class="col-lg-6 bg-white py-6">
                 <div class="row h-100 align-items-center justify-content-center">
                   <div class="col-lg-10" data-zanim-timeline='{"delay":0.4}' data-zanim-trigger="scroll">
-                    <h1 class="font-weight-light text-uppercase fs-2 fs-sm-4 fs-lg-2 fs-xl-4"><span class="d-block overflow-hidden"><span class="d-block mb-1" data-zanim-xs='{"delay":0.1}'>hi, we're</span></span><span class="d-block overflow-hidden"><span class="d-inline-block" data-zanim-xs='{"delay":0.2}'><span class="display-4 fs-3 fs-sm-5 fs-lg-3 fs-xl-5 font-weight-black">america unsilenced</span></span>
+                    <h1 class="font-weight-light text-uppercase fs-2 fs-sm-4 fs-lg-2 fs-xl-4"><span class="d-block overflow-hidden"><span class="d-block mb-1" data-zanim-xs='{"delay":0.1}'>hi, we are</span></span><span class="d-block overflow-hidden"><span class="d-inline-block" data-zanim-xs='{"delay":0.2}'><span class="display-4 fs-3 fs-sm-5 fs-lg-3 fs-xl-5 font-weight-black">america unsilenced</span></span>
                       </span>
                     </h1>
                     <div class="overflow-hidden">
